<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".register">

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="99dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="99dp"
            android:ems="10"
            android:hint="Name"
            android:gravity="center"
            android:backgroundTint="@color/green"
            android:textCursorDrawable="@color/green"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/etUserEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="99dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="99dp"
            android:ems="10"
            android:hint="email id"
            android:gravity="center"
            android:backgroundTint="@color/green"
            android:textCursorDrawable="@color/green"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etAge" />

        <EditText
            android:id="@+id/etUserPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="99dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="99dp"
            android:ems="10"
            android:gravity="center"
            android:backgroundTint="@color/green"
            android:textCursorDrawable="@color/green"
            android:hint="Password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etUserEmail" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="163dp"
            android:background="@drawable/rounded_login"
            android:text="Register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.434"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etMobile" />

        <TextView
            android:id="@+id/tvUserLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="102dp"
            android:layout_marginEnd="108dp"
            android:layout_marginBottom="16dp"
            android:text="Already have an account? Login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="99dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="99dp"
            android:ems="10"
            android:hint="Age"
            android:gravity="center"
            android:backgroundTint="@color/green"
            android:textCursorDrawable="@color/green"
            android:inputType="numberSigned|numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etUserName" />

        <EditText
            android:id="@+id/etdeaf"
            android:layout_width="372dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="21dp"
            android:ems="10"
            android:gravity="center"
            android:backgroundTint="@color/green"
            android:textCursorDrawable="@color/green"
            android:hint="Normal User or Partial deaf or Complete deaf"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etUserPassword" />

        <EditText
            android:id="@+id/etfName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="99dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="99dp"
            android:ems="10"
            android:hint="Family member name"
            android:inputType="textPersonName"
            android:gravity="center"
            android:backgroundTint="@color/green"
            android:textCursorDrawable="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etdeaf" />

        <EditText
            android:id="@+id/etRelation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="99dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="99dp"
            android:ems="10"
            android:hint="Relation"
            android:gravity="center"
            android:backgroundTint="@color/green"
            android:textCursorDrawable="@color/green"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etfName" />

        <EditText
            android:id="@+id/etMobile"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="56dp"
            android:ems="10"
            android:gravity="center"
            android:backgroundTint="@color/green"
            android:textCursorDrawable="@color/green"
            android:hint="Mobile number of family member"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etRelation" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.0"
            app:layout_constraintGuide_begin="20dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="1.0"
            app:layout_constraintGuide_begin="20dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.0"
            app:layout_constraintGuide_begin="20dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="1.0"
            app:layout_constraintGuide_begin="20dp" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>

